@@ -2,8 +2,8 @@ package com.medisync.medisync.config;
 
 import com.medisync.medisync.repository.CustomUserDetailsServiceImp;
 import com.medisync.medisync.security.JwtFilter;
+import com.medisync.medisync.security.JwtUtil;
 import jakarta.servlet.Filter;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -21,26 +21,27 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.client.RestTemplate;
 
+import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
+
+import org.springframework.boot.autoconfigure.cache.RedisCacheManagerBuilderCustomizer;
+import org.springframework.data.redis.cache.RedisCacheConfiguration;
+import org.springframework.data.redis.serializer.GenericJackson2JsonRedisSerializer;
+import org.springframework.data.redis.serializer.RedisSerializationContext;
 
 
 @Configuration
 @EnableWebSecurity
 public class SpringSecure {
 
-    @Autowired
-    private CustomUserDetailsServiceImp customUserDetailsService;
-
-    @Autowired
-    private JwtFilter jwtFilter;
-
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(List.of("http://localhost:3000"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
@@ -50,52 +51,73 @@ public class SpringSecure {
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
+    public JwtFilter jwtFilter(JwtUtil jwtUtil, CustomUserDetailsServiceImp userDetailsService) {
+        return new JwtFilter(jwtUtil, userDetailsService);
+    }
 
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http, JwtFilter jwtFilter) throws Exception {
+        http
                 .cors(Customizer.withDefaults())
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-
-                        .requestMatchers(HttpMethod.GET, "/user/username/**").permitAll()
+                        // Public endpoints that don't require any authentication
                         .requestMatchers("/auth/**").permitAll()
-
                         .requestMatchers(HttpMethod.POST, "/user").permitAll()
 
+                        // Unauthenticated access to GET endpoints for viewing data
+                        .requestMatchers(HttpMethod.GET, "/user/all").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/user/doctors").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/appointment/all").permitAll()
 
-                        .requestMatchers(HttpMethod.GET, "/user/all").hasRole("ADMIN")
-
+                        // Authenticated users can view their own data
+                        .requestMatchers(HttpMethod.GET, "/user/username/**").authenticated()
                         .requestMatchers(HttpMethod.GET, "/user/**").authenticated()
-                        .requestMatchers(HttpMethod.DELETE, "/user/**").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/appointment/doctor").hasRole("DOCTOR")
+                        .requestMatchers(HttpMethod.GET, "/appointment/patient").hasRole("PATIENT")
+                        .requestMatchers(HttpMethod.GET, "/notification/my").authenticated()
+
+                        // Specific role-based access for modifications
+                        .requestMatchers(HttpMethod.POST, "/appointment").hasAnyRole("DOCTOR", "PATIENT") // Only doctors and patients can book appointments
+                        .requestMatchers(HttpMethod.DELETE, "/user/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/user/**").authenticated()
-
-                        .requestMatchers(HttpMethod.GET, "/appointment/all").hasRole("PATIENT")
-                        .requestMatchers("/appointment/doctor/**").hasRole("DOCTOR")
-                        .requestMatchers("/appointment/patient/**").hasRole("PATIENT")
-                        .requestMatchers("/appointment/**").authenticated()
-                        .requestMatchers("/notification/send").authenticated()
-                        .requestMatchers("/notification/my").authenticated()
-
+                        .requestMatchers(HttpMethod.PUT, "/appointment/**").permitAll()
+                        // All other requests require authentication
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Use stateless sessions for JWT
-
-                .addFilterBefore((Filter) jwtFilter, UsernamePasswordAuthenticationFilter.class)
-
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .httpBasic(Customizer.withDefaults());
 
         return http.build();
     }
 
     @Bean
+    public RestTemplate restTemplate() {
+        return new RestTemplate();
+    }
+
+    @Bean
+    public RedisCacheManagerBuilderCustomizer redisCacheManagerBuilderCustomizer() {
+        return (builder) -> builder
+                .withCacheConfiguration("allAppointments",
+                        RedisCacheConfiguration.defaultCacheConfig().entryTtl(Duration.ofMinutes(10)))
+                .withCacheConfiguration("appointmentDetails",
+                        RedisCacheConfiguration.defaultCacheConfig().entryTtl(Duration.ofMinutes(5)))
+                .withCacheConfiguration("patientAppointments",
+                        RedisCacheConfiguration.defaultCacheConfig().entryTtl(Duration.ofMinutes(5)))
+                .withCacheConfiguration("doctorAppointments",
+                        RedisCacheConfiguration.defaultCacheConfig().entryTtl(Duration.ofMinutes(5)));
+    }
+
+
+    @Bean
     public PasswordEncoder passwordEncoder() {
-        // Use BCryptPasswordEncoder for strong password hashing
         return new BCryptPasswordEncoder();
     }
 
-    // Explicitly configure DaoAuthenticationProvider for clarity, though often implicit
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
+    public DaoAuthenticationProvider authenticationProvider(CustomUserDetailsServiceImp customUserDetailsService) {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(customUserDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
@@ -104,7 +126,6 @@ public class SpringSecure {
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        // Expose AuthenticationManager bean for authentication
         return authConfig.getAuthenticationManager();
     }
 }
